@@ -353,17 +353,29 @@ exports.asap = function (value, resolved, rejected) {
  * "Method" constructs methods like "get(promise, name)" and "put(promise)".
  */
 exports.Method = Method;
-function Method (methodName) {
+function Method (op) {
     return function (object) {
-        var deferred = defer();
         var args = Array.prototype.slice.call(arguments, 1);
-        forward.apply(undefined, [
-            ref(object),
-            methodName,
-            deferred.resolve
-        ].concat(args));
-        return deferred.promise;
+        return send(object, op, args);
     };
+}
+
+/**
+ * sends a message to a value in a future turn
+ * @param object* the recipient
+ * @param op the name of the message operation, e.g., "when",
+ * @param args {Array} an array of further arguments
+ * @returns result {Promise} a promise for the result of the operation
+ */
+exports.send = send;
+function send(object, op, args) {
+    var deferred = defer();
+    forward.apply(undefined, [
+        ref(object),
+        op,
+        deferred.resolve
+    ].concat(args));
+    return deferred.promise;
 }
 
 /**
